[package]
name = "gtmos_kernel_x86_64"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gtmos_kernel_x86_64"
test = true
bench = false

[dependencies]
gtmos_kernel = { path = "../gtmos_kernel" }
bootloader_api = "0.11.4"
x86_64 = "0.14.11"
spin = "0.9.2"
uart_16550 = "0.3.0"
lazy_static = { version="1.0", features=["spin_no_std"] }
pic8259 = "0.10.4"
