[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.0"
font8x8 = { version="0.3.1", default-features=false, features=["unicode"] }
spin = "0.9.2"
uart_16550 = "0.3.0"
lazy_static = { version="1.0", features=["spin_no_std"] }
